<resources>

    <string name="author">Нетология. Университет интернет-профессий будущего</string>
    <string name="published">21 мая в 18:36</string>
    <string name="todo2" translatable="false">TODO2</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="text">Привет! Это новая Нетология! Когда-то Нетология начичиналась с интенсивов поонлайн-маркетингу.Затем плявились курсы по дизайну,разработке,аналитике,управлению. Мы растем сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остается с нами: мы верим , что в каждом уже есть сила, которая заставляет хотеть больше,целиться выше, бежать быстрее. Наша миссия- помочь встать на путь роста и начать цепочку перемен.</string>
    <string name="todo3" translatable="false">TODO3</string>
    <string name="viewText" translatable="false">5000</string>
    <string name="heartNum" translatable="false">10</string>
    <string name="textNum" translatable="false">5</string>
    <string name="todo4" translatable="false">TODO4</string>
    <string name="todo5" translatable="false">TODO5</string>
    <string name="app_name">NMedia</string>
    <string name="post_text" translatable="false">Что у вас нового?</string>
    <string name="save_button_text">Сохранить</string>
    <string name="update_button_text">Обновить</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="редактировать" translatable="false">Редактировать</string>
    <string name="удалить" translatable="false">Удалить</string>
    <string name="сохранить" translatable="false">Сохранить</string>
    <string name="отменить" translatable="false">Отменить</string>
    <string name="editing_title" translatable="false">Редактирование поста</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Пусто</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="add_new_post" translatable="false">Add new post</string>
    <string name="chooser_play_video">Choose video player</string>
    <string name="back" translatable="false">Back</string>
    <string name="post_menu" translatable="false">Меню поста</string>
    <string name="play_video" translatable="false">Воспроизвести видео</string>
    <string name="author_name" translatable="false">Автор</string>
    <string name="published_date" translatable="false">Дата публикации</string>
    <string name="post_content" translatable="false">Содержимое поста</string>
    <string name="video_content" translatable="false">Видео контент</string>
    <string name="like_count" translatable="false">0</string>
    <string name="share_count" translatable="false">0</string>
    <string name="views_count" translatable="false">0</string>
    <string name="like" translatable="false">like</string>
    <string name="loading" translatable="false">Загружаем данные…</string>
    <string name="empty_title" translatable="false">Ничего не найдено</string>
    <string name="empty_message" translatable="false">Здесь пока нет постов</string>
    <string name="error_title" translatable="false">Произошла ошибка</string>
    <string name="error_message" translatable="false">Не удалось загрузить данные. Проверьте подключение и попробуйте ещё раз.</string>
    <string name="retry" translatable="false">Повторить</string>
    <string name="playButton" translatable="false">TODO</string>
    <string name="attachment_image">Attachment image</string>
    <string name="error_unknown">Ошибка</string>
    <string name="show">Показать</string>
    <string name="add_post">Добавить пост</string>
    <string name="newer_posts_count">Новые посты: %1$d</string>
    <string name="add">Добавить</string>
    <string name="all_points" translatable="false">Все точки</string>
    <string name="no_points" translatable="false">Точек пока нет</string>
    <string name="create_point" translatable="false">Создать точку</string>
    <string name="edit_point" translatable="false">Редактировать точку</string>
    <string name="title" translatable="false">Название</string>
    <string name="description" translatable="false">Описание</string>
    <string name="edit" translatable="false">Редактировать</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="open_map" translatable="false">Карта</string>


</resources>
